// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-open-with/IntegrationPortalContainer should render a loading indicator 1`] = `
<IntegrationPortal
  integrationWindow="window"
>
  <div
    className="be bcow bcow-portal-container"
  >
    <LoadingIndicator
      className="bcow-portal-loading-indicator"
      size="large"
    />
  </div>
</IntegrationPortal>
`;

exports[`elements/content-open-with/IntegrationPortalContainer should render an error mask if an error occurs 1`] = `
<IntegrationPortal
  integrationWindow="window"
>
  <div
    className="be bcow bcow-portal-container"
  >
    <ErrorMask
      errorHeader={
        <FormattedMessage
          defaultMessage="We’re sorry, this integration is currently unavailable."
          id="be.executeIntegrationOpenWithErrorHeader"
        />
      }
      errorSubHeader={
        <FormattedMessage
          defaultMessage="Please try again later."
          id="be.executeIntegrationOpenWithErrorSubHeader"
        />
      }
    />
  </div>
</IntegrationPortal>
`;
